edited section title

--- a/docs/week_1/1_Logistic_regression_for_musical_tags.ipynb
+++ b/docs/week_1/1_Logistic_regression_for_musical_tags.ipynb
@@ -6,7 +6,7 @@
         "id": "WXu6PqMa8zvJ"
       },
       "source": [
-        "# Logistic Regression for Musical Tags\n",
+        "# 1: Logistic Regression for Musical Tags\n",
         "[![View filled on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/annabavaresco/ancm2024/blob/main/docs/1_Logistic_regression_for_musical_tags.ipynb)\n",
         "[![View filled in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/annabavaresco/ancm2024/blob/main/docs/1_Logistic_regression_for_musical_tags.ipynb)\n",
         "\n",
