--- a/docs/week_3/Item_Response_Theory_with_R.ipynb
+++ b/docs/week_3/Item_Response_Theory_with_R.ipynb
@@ -8,6 +8,9 @@
       "source": [
         "# Item Response Theory with `mirt`\n",
         "\n",
+        "[![View filled on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/annabavaresco/ancm2024/blob/main/docs/week_3/Item_Response_Theory_with_R.ipynb)\n",
+        "[![View filled in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/annabavaresco/ancm2024/blob/main/docs/week_3/Item_Response_Theory_with_R.ipynb)\n",
+        "\n",
         "*This notebook was adapted from materials created by Philipp Masur in 2022*\n",
         "\n",
         "---\n",
