--- a/docs/week_3/Item_Response_Theory_with_R.ipynb
+++ b/docs/week_3/Item_Response_Theory_with_R.ipynb
@@ -1827,7 +1827,7 @@
         "id": "haX7h_V_b2Tn"
       },
       "source": [
-        "# 1PL or Rasch model\n",
+        "## 1PL or Rasch model\n",
         "\n",
         "The 1PL model gets rid of yet another parameter: item discrimination. It\n",
         "basically constrains item discrimination to be equal across all items.\n",
