--- a/docs/week_2/2A_Language_Model_Refresher.ipynb
+++ b/docs/week_2/2A_Language_Model_Refresher.ipynb
@@ -6,7 +6,7 @@
         "id": "qsIwEUqxodIw"
       },
       "source": [
-        "# 2A: Language model refresher\n",
+        "# 2A - Language model refresher\n",
         "\n",
         "[![View filled on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/annabavaresco/ancm2024/blob/main/docs/week_2/2A_Language_Model_Refresher.ipynb)\n",
         "[![View filled in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/annabavaresco/ancm2024/blob/main/docs/week_2/2A_Language_Model_Refresher.ipynb)\n",
