--- a/docs/week_2/2C_LM_Surprisal_and_EEG_data.ipynb
+++ b/docs/week_2/2C_LM_Surprisal_and_EEG_data.ipynb
@@ -6,7 +6,7 @@
         "id": "ki8bLkXGxqVL"
       },
       "source": [
-        "# 2C: Language Model Surprisal and EEG Data\n",
+        "# 2C - Language Model Surprisal and EEG Data\n",
         "[![View filled on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/annabavaresco/ancm2024/blob/main/docs/week_2/2C_LM_Surprisal_and_EEG_data.ipynb)\n",
         "[![View filled in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/annabavaresco/ancm2024/blob/main/docs/week_2/2C_LM_Surprisal_and_EEG_data.ipynb)\n",
         "\n",
