--- a/docs/week_3/Item_Response_Theory_with_R.ipynb
+++ b/docs/week_3/Item_Response_Theory_with_R.ipynb
@@ -388,7 +388,7 @@
         "id": "cmPeLZZ9wehO"
       },
       "source": [
-        "### Fitting a 3PL model\n",
+        "## 3PL model\n",
         "\n",
         "The 3PL model takes item discrimination (first parameter: *a*), item\n",
         "difficulty (second parameter: *b*), and guessing probability (third\n",
