--- a/docs/week_2/2C_LM_Surprisal_and_EEG_data.ipynb
+++ b/docs/week_2/2C_LM_Surprisal_and_EEG_data.ipynb
@@ -39,7 +39,7 @@
         "We'll look at how these vectors are used to learn us something about EEG responses later on in this notebook. For now, let's focus on _semantic dissimilarity_ and how it was operationalised by Broderick and colleagues.\n",
         "\n",
         "###**QUESTION 1**\n",
-        "Are there are any shortcomings with using word2vec vectors? Do you think that the contextualised vectors that we can get from more recent language models might be more suitable for the purpose? (⚠️_Spoiler alert:_ all these rhetoric questions seem to presuppose a 'yes')"
+        "Are there are any shortcomings with using word2vec vectors? Do you think that the contextualised vectors that we can get from more recent language models might be more suitable for the purpose? (⚠️_Spoiler alert:_ all these rhetorical questions seem to presuppose a 'yes')"
       ]
     },
     {
@@ -859,8 +859,10 @@
         "\n",
         "a) Study the temporal response functions you find for a model that uses Broderick's model of word surprisal versus one that uses the BERT model (with 4 words prior context). Do you observe the N400 component (negative polarization approximately 400 ms after word onset) in some of the channels? Are those the relevant channels? Do you find differences between the two models?\n",
         "\n",
-        "b ) Now consider the results you get with a model that simply assigns uniform suprisal values to all words (i.e., it does not distinguish between suprising or unsurpring words). You can find the data for this model in the `static_100000.npy` file. Does that model change your assessment of the performance of the Broderick and BERT models?\n",
+        "b ) Now consider the results you get with a model that simply assigns uniform surprisal values to all words (i.e., it does not distinguish between suprising or unsurpring words). You can find the data for this model in the `static_100000.npy` file. Does that model change your assessment of the performance of the Broderick and BERT models?\n",
         "\n",
+        "\n",
+        "Please write down your answers to all the questions in this assignment in a dedicated PDF. There is no page/word limit, but you are encouraged to keep your answers clear and concise. \n",
         "\n"
       ]
     }
