--- a/docs/week_2/2C_LM_Surprisal_and_EEG_data.ipynb
+++ b/docs/week_2/2C_LM_Surprisal_and_EEG_data.ipynb
@@ -506,7 +506,7 @@
         "\n",
         "\n",
         "---\n",
-        "\\*If you find the concept of a TRF a bit hard to grasp, I would recommend looking at [this](https://eelbrain.readthedocs.io/en/r-0.31/auto_examples/reverse-correlation/trf_intro.html) resource, which has some nice and clear visualisations.\n"
+        "\\*If you find the concept of a TRF a bit hard to grasp, I would recommend looking at [this](https://eelbrain.readthedocs.io/en/stable/auto_examples/temporal-response-functions/trf_intro.html#sphx-glr-auto-examples-temporal-response-functions-trf-intro-py) resource, which has some nice and clear visualisations.\n"
       ]
     },
     {
