changed lab 2c question

--- a/docs/week_2/2C_LM_Surprisal_and_EEG_data.ipynb
+++ b/docs/week_2/2C_LM_Surprisal_and_EEG_data.ipynb
@@ -857,7 +857,7 @@
       "source": [
         "### **QUESTION 3**\n",
         "\n",
-        "a) Study the temporal response functions you find for a model that uses Broderick's model of word surprisal versus one that uses the BERT model (with 4 words prior context). Do you observe the N400 component (negative polarization approximately 400 ms after word onset) in some of the channels? Are those the relevant channels? Do you find differences between the two models?\n",
+        "a) Study the temporal response functions found for a model that uses Broderick's model of word surprisal versus one that uses the BERT model (with 4 words prior context). Do you observe the N400 component (negative polarization approximately 400 ms after word onset) in some of the channels? Are those the relevant channels (you may want to look at [Broderick's paper](https://www.sciencedirect.com/science/article/pii/S0960982218301465) to get a better sense of which are the 'relevant' channels)? Do you find differences between the two models?\n",
         "\n",
         "b ) Now consider the results you get with a model that simply assigns uniform surprisal values to all words (i.e., it does not distinguish between suprising or unsurpring words). You can find the data for this model in the `static_100000.npy` file. Does that model change your assessment of the performance of the Broderick and BERT models?\n",
         "\n",
