--- a/docs/week_3/3_IRT_Stan.ipynb
+++ b/docs/week_3/3_IRT_Stan.ipynb
@@ -6,7 +6,7 @@
         "id": "t9lgYi7EPK2m"
       },
       "source": [
-        "# Item Response Theory with Stan\n",
+        "# 3 - Item Response Theory with Stan\n",
         "\n",
         "[![View filled on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/annabavaresco/ancm2024/blob/main/docs/week_3/3_IRT_Stan.ipynb)\n",
         "[![View filled in Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/annabavaresco/ancm2024/blob/main/docs/week_3/3_IRT_Stan.ipynb)"
@@ -1614,10 +1614,12 @@
       },
       "source": [
         "1.   Explore 1-, 2-, 3- and 4-parameter IRT models for the Hooked on Music data according to the template. Which segments are most difficult? Which are easiest? Most/least discriminating? Are the guessing parameters what you would expect?\n",
-        "2.   Explore an alternative data model (e.g., using `rec_only.json` or focussing on `is_recognised` instead of `is_verified`), again with 1-, 2-, 3- and 4-parameter IRT models. How do your results compare to what you found in Step 1\n",
-        "3.   (Optional) Expand one of your models to include a regression on audio features recognition time, or Goldsmith's music sophistication to predict difficulty and ability.\n",
+        "2.   Explore an alternative data model (e.g., using `rec_only.json` or focussing on `is_recognised` instead of `is_verified`), again with 1-, 2-, 3- and 4-parameter IRT models. How do your results compare to what you found in Step 1?\n",
         "\n",
-        "Write a short report (250–500 words) summarising your findings and (to the extent you can) any musical explanations or surprising findings based on what you can hear in the songs."
+        "\n",
+        "Write a short report (less than one page) summarising your findings and (to the extent you can) any musical explanations or surprising findings based on what you can hear in the songs.\n",
+        "\n",
+        "⚠️ Please make sure you include your `irt4ancn.stan` file(s) in the assignment submission, as well as the notebook and the PDF with your report."
       ]
     },
     {
