--- a/docs/week_3/3_IRT_Stan.ipynb
+++ b/docs/week_3/3_IRT_Stan.ipynb
@@ -193,7 +193,7 @@
         "id": "VMgzZvvTO3Bm"
       },
       "source": [
-        "The data in this lab come from the Eurovision Song Contest edition of the Hooked on Music experiment. You can try the experiment (here)[https://hooked.amsterdammusiclab.nl/experiment/eurovision_2021]."
+        "The data in this lab come from the Eurovision Song Contest edition of the Hooked on Music experiment. You can try the experiment [here](https://hooked.amsterdammusiclab.nl/experiment/eurovision_2021)."
       ]
     },
     {
