--- a/docs/week_3/3_IRT_Stan.ipynb
+++ b/docs/week_3/3_IRT_Stan.ipynb
@@ -122,7 +122,7 @@
         "id": "HcDGuqKbJXDC"
       },
       "source": [
-        "Next, you need to download the data and Stan template [here](https://drive.google.com/file/d/1BBeL2BtfTIBqMlJFTC_OZTUdT_pt9mpR/view?usp=share_link). Save it to your own Google Drive as in previous labs, and then mount your drive."
+        "Next, you need to download the data and Stan template [here](https://app.amsterdammusiclab.nl/eurovision_2021). Save it to your own Google Drive as in previous labs, and then mount your drive."
       ]
     },
     {
@@ -193,7 +193,7 @@
         "id": "VMgzZvvTO3Bm"
       },
       "source": [
-        "The data in this lab come from the Eurovision Song Contest edition of the Hooked on Music experiment. You can try the experiment [here](https://hooked.amsterdammusiclab.nl/experiment/eurovision_2021)."
+        "The data in this lab come from the Eurovision Song Contest edition of the Hooked on Music experiment. You can try the experiment [here](https://app.amsterdammusiclab.nl/eurovision_2021). In this experiment, people were presented with segments from Eurovision songs and were asked if they'd ever heard the song. If their answer was 'yes', the song was muted for a few seconds and then went back on. In some trials, the song resumed in the right point. In others, it resumed a bit earlier or later. The second question participants had to answer was, therefore, whether the second segment was the 'right' continuation to the first or not. \n"
       ]
     },
     {
@@ -685,15 +685,6 @@
       },
       "source": [
         "## Lab"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "tQkA3W1qVbaC"
-      },
-      "source": [
-        "Open the `irt4ancm.stan` file in the right-hand pane. You will make any adjstments to your model here."
       ]
     },
     {
@@ -1613,7 +1604,7 @@
         "id": "iVz5tgVATDQl"
       },
       "source": [
-        "1.   Explore 1-, 2-, 3- and 4-parameter IRT models for the Hooked on Music data according to the template. Which segments are most difficult? Which are easiest? Most/least discriminating? Are the guessing parameters what you would expect?\n",
+        "1.   Explore 1-, 2-, 3- and 4-parameter IRT models for the Hooked on Music data according to the template. Which segments are most difficult? Which are easiest? Most/least discriminating? Are the guessing parameters what you would expect? (Tip: if you're struggling with the syntax, here is the [IRT section](https://mc-stan.org/docs/stan-users-guide/regression.html#item-response-models.section) of the Stan Users Guide)\n",
         "2.   Explore an alternative data model (e.g., using `rec_only.json` or focussing on `is_recognised` instead of `is_verified`), again with 1-, 2-, 3- and 4-parameter IRT models. How do your results compare to what you found in Step 1?\n",
         "\n",
         "\n",
