updated stan lab

--- a/docs/week_3/3_IRT_Stan.ipynb
+++ b/docs/week_3/3_IRT_Stan.ipynb
@@ -688,6 +688,63 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Open the `irt4ancm.stan` file in the right-hand pane. You will make any adjstments to your model there. Here is a breakdown of what the main code blocks from `irt4ancm.stan` are doing:\n",
+        "\n",
+        "```\n",
+        "data {\n",
+        "  int<lower=1> M;  // number of observations\n",
+        "  int<lower=1> N;  // number of participants\n",
+        "  int<lower=1> I;  // number of song segments\n",
+        "  int<lower=1> J;  // number of songs\n",
+        "  array[M] int<lower=0,upper=1> is_recognised;  // was the segment recognised?\n",
+        "  array[M] int<lower=0,upper=1> is_verified;    // was the segment verified correctly?\n",
+        "  array[M] int<lower=1,upper=N> participant;    // participant number\n",
+        "  array[M] int<lower=1,upper=I> seg;            // segment number\n",
+        "  array[M] int<lower=1,upper=I> song;           // segment number\n",
+        "  array[M] int<lower=0,upper=1> continuation_correctness;  // did the verification segment restart in the correct place?\n",
+        "  vector<lower=0>[M] recognition_time;            // how long did it take to recognise the segment?\n",
+        "  matrix[I,10] audio_features;                             // audio features for each segment\n",
+        "  vector[N] sophistication;                                // Goldsmith's music sophistication for each participant\n",
+        "}\n",
+        "``` \n",
+        "This block is simply defining the variables corresponding to the data we're going to fit the model on.\n",
+        "\n",
+        "```\n",
+        "parameters {\n",
+        "  real mu_delta;\n",
+        "  real<lower=0> sigma_theta;  // participant prior SD\n",
+        "  real<lower=0> sigma_delta;  // difficulty prior SD\n",
+        "  vector[N] theta;  // participant abilities\n",
+        "  vector[I] delta;  // segment difficulties\n",
+        "}\n",
+        "```\n",
+        "\n",
+        "Here is where you declare your parameters. Any parameter that you plan to include in the model needs to be specified here. In this case, we're starting off with a Rasch (1PL) model, where the only parameters are $\\theta$ (the participant's ability) and $\\delta$ (the difficulty of the segment). As you experiment with more complex models (2PL, 3PL, and 4PL), will need to add more parameters. For each parameter, we should also specify what is our hypothesis about its distribution. This is what the following block (included inside `model`) does:\n",
+        "\n",
+        "```\n",
+        "  // Hyperpriors\n",
+        "  mu_delta ~ std_normal();\n",
+        "  sigma_theta ~ std_normal(); // Stan automatically cuts off the negative values\n",
+        "  sigma_delta ~ std_normal(); // Stan automatically cuts off the negative values\n",
+        "\n",
+        "  // Priors\n",
+        "  theta ~ normal(0, sigma_theta);\n",
+        "  delta ~ normal(mu_delta, sigma_delta);\n",
+        "```\n",
+        "\n",
+        "How do we decide on which distribution to choose for each parameter? Unless you have a specific educated guess about it, starting with a normal distribution is usually a good choice. Let's now move to the part of the code where our model is defined:\n",
+        "\n",
+        "```\n",
+        "is_verified[m] ~ bernoulli_logit(theta[participant[m]] - delta[seg[m]]);\n",
+        "```\n",
+        "\n",
+        "This line essentially means that the variable you are trying to model (`is_verified`) is distributed as (`~`) a bernoulli logit distribution with probability $\\theta-\\delta$. When editing the `irt4ancm.stan` file, you might actually want to start from this line. You can choose to either predict the `is_verified` or the `is_recognised` variable. "
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -704,7 +761,11 @@
         "id": "HBuo286zVi5h"
       },
       "source": [
-        "Every time you change the model, you will need to recompile it."
+        "As we've just seen, the 'recipe' for our model is defined in the stan file. Now we will actually compile the model. Every time you change the model, you will need to save the sta file and recompile it by running the cell below.\n",
+        "\n",
+        "💡 Tip: Colab will probably save your edits to the stan file automatically. However, be aware that the saved changes may be available only within the session. In other words, when the notebook runtime is disconnected, you may lose the edits you make to your stan file. To make sure you don't lose your progress, you may want to use one of the following strategies:\n",
+        "1. Unzip the `irt4ancm.zip` folder directly in GG Drive and make sure you edit the stan file saved to your Drive\n",
+        "2. Alternatively, you can simply download the stan file before closing Colab. You can do that by simply hovering on the stan file on the left pane > clicking on the 3 dots > selecting 'download'."
       ]
     },
     {
@@ -1556,6 +1617,42 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "You may want to rearrange the parameter estimates in a numpy array (or even a pandas dataframe, when your model has more parameters), so that you can look at the $\\delta$ estimates for each segment."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "deltas = fit.stan_variables()['delta'].mean(axis=0)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "By simply sorting the array, you can then identify the segments corresponding to the higher/lower $\\delta$ values."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# segments ids corresponding to lower deltas\n",
+        "print(np.argsort(deltas)[:10])\n",
+        "\n",
+        "# segments ids corresponding to lower deltas\n",
+        "print(np.flip(np.argsort(deltas))[:10])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "aiqRafBuW4ek"
       },
@@ -1566,7 +1663,7 @@
         "*   `~ normal(mu, sigma)` for a normal distribution with specified mean and standard deviation\n",
         "*   `~ lognormal(mu, sigma)` for a log-normal distribution (handy for discrimination parameters)\n",
         "*   `~ bernoulli(p)` for a Bernoulli distribution parameterised by the probability of success\n",
-        "*   `~ bernoulli_logit(z)` for a Bernoulli distribution parameterised by the inverse logistic function of the probability of success\n",
+        "*   `~ bernoulli_logit(z)` for a Bernoulli distribution parameterised by the inverse logistic function of the probability of success.\n",
         "\n"
       ]
     },
