updated stan lab

--- a/docs/week_3/3_IRT_Stan.ipynb
+++ b/docs/week_3/3_IRT_Stan.ipynb
@@ -36,7 +36,7 @@
         "id": "TucqWWFKNWed"
       },
       "source": [
-        "First, you need to install Stan."
+        "First, you need to install Stan. This may take several minutes :))"
       ]
     },
     {
@@ -193,7 +193,7 @@
         "id": "VMgzZvvTO3Bm"
       },
       "source": [
-        "The data in this lab come from the Eurovision Song Contest edition of the Hooked on Music experiment. You can try the experiment [here](https://app.amsterdammusiclab.nl/eurovision_2021). In this experiment, people were presented with segments from Eurovision songs and were asked if they'd ever heard the song. If their answer was 'yes', the song was muted for a few seconds and then went back on. In some trials, the song resumed in the right point. In others, it resumed a bit earlier or later. The second question participants had to answer was, therefore, whether the second segment was the 'right' continuation to the first or not. \n"
+        "The data in this lab come from the Eurovision Song Contest edition of the Hooked on Music experiment. You can try the experiment [here](https://app.amsterdammusiclab.nl/eurovision_2021). In this experiment, people were presented with segments from Eurovision songs and were asked if they'd ever heard the song. If their answer was 'yes', the song was muted for a few seconds and then went back on. In some trials, the song resumed at the right point. In others, it resumed a bit earlier or later. Participants were then alsp asked whether the second segment was the 'right' continuation for the first or not. \n"
       ]
     },
     {
@@ -735,7 +735,7 @@
         "  delta ~ normal(mu_delta, sigma_delta);\n",
         "```\n",
         "\n",
-        "How do we decide on which distribution to choose for each parameter? Unless you have a specific educated guess about it, starting with a normal distribution is usually a good choice. Let's now move to the part of the code where our model is defined:\n",
+        "How do we decide on which distribution to choose for each parameter? Unless you have a specific educated guess about it, starting with a normal distribution is usually a good choice. Let's now move to the core part of the code, where our model is atually defined:\n",
         "\n",
         "```\n",
         "is_verified[m] ~ bernoulli_logit(theta[participant[m]] - delta[seg[m]]);\n",
@@ -764,7 +764,9 @@
         "As we've just seen, the 'recipe' for our model is defined in the stan file. Now we will actually compile the model. Every time you change the model, you will need to save the sta file and recompile it by running the cell below.\n",
         "\n",
         "💡 Tip: Colab will probably save your edits to the stan file automatically. However, be aware that the saved changes may be available only within the session. In other words, when the notebook runtime is disconnected, you may lose the edits you make to your stan file. To make sure you don't lose your progress, you may want to use one of the following strategies:\n",
+        "\n",
         "1. Unzip the `irt4ancm.zip` folder directly in GG Drive and make sure you edit the stan file saved to your Drive\n",
+        "\n",
         "2. Alternatively, you can simply download the stan file before closing Colab. You can do that by simply hovering on the stan file on the left pane > clicking on the 3 dots > selecting 'download'."
       ]
     },
