--- a/docs/week_3/3_IRT_Stan.ipynb
+++ b/docs/week_3/3_IRT_Stan.ipynb
@@ -1649,7 +1649,7 @@
         "# segments ids corresponding to lower deltas\n",
         "print(np.argsort(deltas)[:10])\n",
         "\n",
-        "# segments ids corresponding to lower deltas\n",
+        "# segments ids corresponding to higher deltas\n",
         "print(np.flip(np.argsort(deltas))[:10])"
       ]
     },
