--- a/docs/week_3/3_IRT_Stan.ipynb
+++ b/docs/week_3/3_IRT_Stan.ipynb
@@ -122,7 +122,7 @@
         "id": "HcDGuqKbJXDC"
       },
       "source": [
-        "Next, you need to download the data and Stan template [here](https://app.amsterdammusiclab.nl/eurovision_2021). Save it to your own Google Drive as in previous labs, and then mount your drive."
+        "Next, you need to download the data and Stan template [here](https://drive.google.com/file/d/1BBeL2BtfTIBqMlJFTC_OZTUdT_pt9mpR/view?usp=share_link). Save it to your own Google Drive as in previous labs, and then mount your drive."
       ]
     },
     {
